# stock-manager

./: app.py  fruit-manager.py  fruit_manager.py  notebook.ipynb  pyproject.toml  readme.md
data/: inventaires.json
